# USTAR

./: CMakeLists.txt  DBG.cpp  DBG.h  README.md  commons.h  main.cpp  results-ustar.ods  validate
other/: configure
other/avg-rle-bug/: avg-rle-bug.py
other/datasets/: download  sequences.txt
other/slurm/: batch-validation.slurm  bcalm-all.slurm  compile-bcalm.slurm  compile-ustar.slurm  convert.slurm  download.slurm  extract-kmers.slurm  kmers-stats.slurm  run-counters.slurm  run-ustar-nofilter.slurm  run-ustar.slurm  run.slurm
src/: Analyzer.cpp  Analyzer.h  DBG.cpp  DBG.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Postprocessor.cpp  Postprocessor.h  SPSS.cpp  SPSS.h  Sorter.cpp  Sorter.h  algos.cpp  algos.h  bwt.cpp  bwt.h  bwt.hpp  commons.cpp  commons.h  consts.h  filesystem.h  main.cpp  ustar-ke.cpp  ustar-test.cpp  ustar.cpp  ustars.cpp  ustarx.cpp
tests/: test2.unitigs.fa  test3.unitigs.fa  test5.unitigs.fa  test8.unitigs.fa
unit-test/: test1.unitigs.fa  test10.unitigs.fa  test11.unitigs.fa  test4.unitigs.fa  test6.unitigs.fa  test7.unitigs.fa  test9.unitigs.fa
